UI and logic fixes.

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 <div class="row bg-dark rounded mb-2 transparent col-shadow">
                     <div class="col-lg p-4">
                         <h3 class="text-danger">How To</h3>
-                        <p class="text-white">To use the app, go to your WTIS and copy the 'Working hour information for &lt;MONTH&gt;' and paste it in the text area bellow. If the pasted data format is correct, the application will automatically refresh the time left once
-                            every second. Use the row which you think best represents your stay.
+                        <p class="text-white">To use the app, go to your WTIS and copy the 'Working hour information for &lt;MONTH&gt;' and paste it in the text area bellow. If the pasted data format is correct, the application will automatically calculate your overtime hours.
+                            Negative values are bad, positive are good. Use the row which you think best represents your stay.
                         </p>
                     </div>
                     <div class="col-lg p-4 ">
